# Crafting-Interpreters

./: .gitignore  README.md  fib.py
clox/: .gitignore  Makefile  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  input  main  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
cpplox/: .gitignore  CMakeLists.txt  Makefile  README.md  chunk.cpp  chunk.h  common.h  debug.cpp  debug.h  input  main  main.cpp  memory.cpp  memory.h  value.cpp
cpplox/src/: CMakeLists.txt  chunk.cpp  chunk.h  common.h  compiler.cpp  compiler.h  debug.cpp  main  main.cpp  memory.cpp  memory.h  object.cpp  object.h  scanner.cpp  scanner.h  stack.h  value.cpp  value.h  vm.cpp  vm.h
cpplox/test/: CMakeLists.txt  TestStack.cpp
plox/: '  Makefile  Pipfile  README.md  closure1  fib  fib2  input
plox/src/: __init__.py  _token.py  ast_printer.py  environment.py  expr_script.py  expression.py  input  interpreter.py  log.py  lox_class.py  loxcallable.py  main.py  parser.py  resolver.py  scanner.py  stack.py  stmt.py  stmt_script.py  token.py
plox/tests/: test_expression.py  test_interpreter.py  test_parser.py  test_resolver.py  test_scanner.py  test_stack.py
